--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "markdown-it": "^7.0.1",
     "mongoose": "^4.5.10",
     "morgan": "~1.7.0",
+    "passport": "^0.3.2",
     "serve-favicon": "~2.3.0"
   }
 }
